--- a/configs/serverNameExample.yml
+++ b/configs/serverNameExample.yml
@@ -15,7 +15,8 @@ app:
   tracingSamplingRate: 1.0       # tracing sampling rate, between 0 and 1, 0 means no sampling, 1 means sampling all links
   registryDiscoveryType: ""      # registry and discovery types: consul, etcd, nacos, if empty, registration and discovery are not used
   cacheType: ""                  # cache type, if empty, the cache is not used, support for "memory" and "redis", if set to redis, must set redis configuration
-
+  jwt: true
+  sign: true
 
 # todo generate http or rpc server configuration here
 # delete the templates code start
@@ -71,12 +72,12 @@ logger:
   level: "info"             # output log levels debug, info, warn, error, default is debug
   format: "console"         # output format, console or json, default is console
   isSave: false             # false:output to terminal, true:output to file, default is false
-  #logFileConfig:           # Effective when isSave=true
-    #filename: "out.log"    # File name (default is out.log)
-    #maxSize: 20            # Maximum file size (MB, default is 10MB)
-    #maxBackups: 50         # Maximum number of old files to retain (default is 100)
-    #maxAge: 15             # Maximum number of days to retain old files (default is 30 days)
-    #isCompression: true    # Whether to compress/archive old files (default is false)
+  logFileConfig:           # Effective when isSave=true
+    filename: "out.log"    # File name (default is out.log)
+    maxSize: 20            # Maximum file size (MB, default is 10MB)
+    maxBackups: 50         # Maximum number of old files to retain (default is 100)
+    maxAge: 15             # Maximum number of days to retain old files (default is 30 days)
+    isCompression: true    # Whether to compress/archive old files (default is false)
 
 
 # todo generate the database configuration here
@@ -92,11 +93,10 @@ database:
     maxIdleConns: 10        # set the maximum number of connections in the idle connection pool
     maxOpenConns: 100       # set the maximum number of open database connections
     connMaxLifetime: 10     # sets the maximum time for which the connection can be reused, in minutes
-    #slavesDsn:             # sets slaves mysql dsn, array type
-    #  - "your slave dsn 1"
-    #  - "your slave dsn 2"
-    #mastersDsn:            # sets masters mysql dsn, array type, non-required field, if there is only one master, there is no need to set the mastersDsn field, the default dsn field is mysql master.
-    #  - "your master dsn"
+    slavesDsn:             # sets slaves mysql dsn, array type
+      - "your slave dsn 1"
+    mastersDsn:            # sets masters mysql dsn, array type, non-required field, if there is only one master, there is no need to set the mastersDsn field, the default dsn field is mysql master.
+      - "your master dsn"
 
   # postgresql settings
   postgresql:
@@ -154,3 +154,12 @@ nacosRd:
   ipAddr: "192.168.3.37"
   port: 8848
   namespaceID: "3454d2b5-2455-4d0e-bf6d-e033b086bb4c"   # namespace id
+
+sign:
+  signKey: "WQAIys9Lyb1DyArc7bwLvKfc5km0gHx2"
+
+jwt:
+  expire: 120   #Minute
+  signingKey: "sunshine"
+  signingMethod: "HS256"
+  issuer: "sunshine"
