--- a/configs/serverNameExample.yml
+++ b/configs/serverNameExample.yml
@@ -15,6 +15,7 @@ app:
   tracingSamplingRate: 1.0       # tracing sampling rate, between 0 and 1, 0 means no sampling, 1 means sampling all links
   registryDiscoveryType: ""      # registry and discovery types: consul, etcd, nacos, if empty, registration and discovery are not used
   cacheType: ""                  # cache type, if empty, the cache is not used, support for "memory" and "redis", if set to redis, must set redis configuration
+  openHttp: true
   jwt: true
   sign: true
 
@@ -22,7 +23,6 @@ app:
 # delete the templates code start
 # http server settings
 http:
-  open: true
   port: 8080                # listen port
   timeout: 0                 # request timeout, unit(second), if 0 means not set, if greater than 0 means set timeout, if enableHTTPProfile is true, it needs to set 0 or greater than 60s
 
