--- a/configs/serverNameExample.yml
+++ b/configs/serverNameExample.yml
@@ -92,15 +92,16 @@ database:
   # mysql settings
   mysql:
     # dsn format,  <username>:<password>@(<hostname>:<port>)/<db>?[k=v& ......]
-    dsn: "root:123456@(192.168.132.142:3306)/account?parseTime=true&loc=Local&charset=utf8,utf8mb4"
+    dsn: "root:jianguo123@(192.168.132.142:3306)/new_coupon_platform?parseTime=true&loc=Local&charset=utf8,utf8mb4"
     enableLog: true         # whether to turn on printing of all logs
     maxIdleConns: 10        # set the maximum number of connections in the idle connection pool
     maxOpenConns: 100       # set the maximum number of open database connections
     connMaxLifetime: 10     # sets the maximum time for which the connection can be reused, in minutes
     slavesDsn: # sets slaves mysql dsn, array type
-      - "your slave dsn 1"
+      - "root:jianguo123@(192.168.132.142:3306)/new_coupon_platform?parseTime=true&loc=Local&charset=utf8,utf8mb4"
     mastersDsn: # sets masters mysql dsn, array type, non-required field, if there is only one master, there is no need to set the mastersDsn field, the default dsn field is mysql master.
-      - "your master dsn"
+      - "root:jianguo123@(192.168.132.142:3306)/new_coupon_platform?parseTime=true&loc=Local&charset=utf8,utf8mb4"
+
 
   # postgresql settings
   postgresql:
